k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: listener-app-prod
  labels:
    name: listener-app-prod
    environment: production
