k8s/prod/scraper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: listener-app-prod
  labels:
    app: scraper
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
        environment: production
    spec:
      containers:
      - name: scraper
        image: ${REGISTRY}/${SCRAPER_IMAGE_NAME}:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
